# Veracium

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  integration.yml
.github/workflows/: docs.yml  mcp-publish.yml  test.yml
docs/: api.md  concepts.md  design-rationale.md  diagnostics.md  index.md  mcp.md  telemetry.md
examples/: claude_cli_provider.py  demo.ipynb  langchain_memory.py  openai_provider.py
src/engram/: __init__.py  cli.py  config.py  diagnostics.py  gate.py  graph.py  ingest.py  mcp_server.py  schema.py  selfcheck.py  telemetry.py
src/engram/llm/: anthropic.py  base.py
src/engram/store/: base.py  sqlite.py
src/veracium/: __init__.py  _json.py  audit.py  cli.py  compile.py  config.py  diagnostics.py  gate.py  graph.py  ingest.py  lifecycle.py  mcp_server.py  portability.py  prompts.py  schema.py  selfcheck.py  telemetry.py
src/veracium/llm/: anthropic.py  base.py
src/veracium/store/: base.py  sqlite.py
tests/: test_audit.py  test_compile_gate.py  test_diagnostics.py  test_eval.py  test_feedback.py  test_host_queries.py  test_lifecycle.py  test_mcp.py  test_outcomes.py  test_portability.py  test_robustness.py  test_selfcheck.py  test_smoke.py  test_telemetry.py
tests/eval/: run_eval.py  scenarios.json
tests/robustness/: adapter.py  invariants.py  run_robustness.py
tests/robustness/fixtures/: messy.jsonl
