[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veracium"
version = "0.1.2"
description = "A provenance-aware memory plug-in for agentic systems: typed graph + episodes, LLM-curated recall, structural injection quarantine, and an evidence-grounded abstention gate."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Quentin Spencer" }]
keywords = ["agent", "memory", "llm", "provenance", "mcp", "rag"]
dependencies = [
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/veracium-ai/Veracium"
Repository = "https://github.com/veracium-ai/Veracium"
Issues = "https://github.com/veracium-ai/Veracium/issues"

# Core is embedded and BYO-LLM: no database, no bundled model client.
# Optional extras add a reference LLM provider and the MCP server.
[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8"]

[project.scripts]
veracium = "veracium.cli:main"
veracium-mcp = "veracium.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/veracium"]
